--- a/site/assets/css/front/color-scheme-liverpool.css
+++ b/site/assets/css/front/color-scheme-liverpool.css
@@ -7,11 +7,11 @@ html.front.top-full .navbar.main {
   color: #e5412d;
 }
 .toolbar .button {
-  color: #e5412d;
-  background-color: #f9c50f;
+  color: #ffffff;
+  background-color: #e5412d;
 }
 .toolbar .button:hover {
-  background-color: #ffd739;
+  background-color: #a2090f;
 }
 .number {
   background-color: #f9c50f;
