--- a/site/assets/css/front/everton-custom.css
+++ b/site/assets/css/front/everton-custom.css
@@ -118,7 +118,7 @@
 	}
 
 	.toolbar .button {
-		margin: 5px 5px 0 0;
+		margin: 0 5px 0 0;
 		padding: 0 19px;
 	}
 
