--- a/site/assets/less/front/color-scheme-everton.less
+++ b/site/assets/less/front/color-scheme-everton.less
@@ -38,12 +38,12 @@ html.front.top-full .navbar.main {
 }
 
 .toolbar .button {
-	color: @team-color;
-	background-color: @custom-bttn-color;
+	color: #ffffff;
+	background-color: @team-color;
 }
 
 .toolbar .button:hover {
-	background-color: @custom-bttn-color-hover;
+	background-color: @header-open-slide-bttn-hover;
 }
 
 .number {
